Fix in community programs on mobile

--- a/app/styles/blocks/full-width-container.scss
+++ b/app/styles/blocks/full-width-container.scss
@@ -6,5 +6,10 @@
         background-position-y: center;
         background-size: 120% auto;
         padding: 3rem 0 2rem;
+
+        @media only screen and (max-width: 600px) {
+            background-size: auto;
+            padding: 2rem;
+        }
     }
 }
